--- a/part_1/assets/css/user_registration.css
+++ b/part_1/assets/css/user_registration.css
@@ -6,6 +6,7 @@ body {
   font-family: "Nunito", sans-serif;
   color: #444444;
   background-color: #fafafa;
+  width: 100%;
 }
 
 header {
@@ -18,50 +19,143 @@ footer {
   height: 50px;
 }
 
+/* button */
+.btn{
+  background-color: rgba(244,57,57,1);
+  color: white;
+  font-weight: bolder;
+}
+
+.btn:hover{
+  background-color: rgb(250 21 21);
+}
+
+/* rating */
+.rating i{
+  margin: 0px;
+  color: #ff9800;
+  vertical-align:middle;
+  align-items: center;
+  font-size: 20px;
+}
 
 /* form */
-.form {
-  background-color: white;
-  padding: 30px;
-  width: 400px;
+.form-container {
+  width: 30%;
   margin: auto;
   height: auto;
 }
 
-.form h3 {
+.form-container h3 {
   color: black;
   text-align: center;
   padding: 20px;
   font-size: 25px;
 }
 
-.form div {
+.form-group-lable-and-input {
   text-align: left;
-  margin-top: 5px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 
-.form label {
-  font-size: 1em;
+.form-container label {
+  font-size: 16px;
 }
 
-.form input {
+.form-container input {
   width: 100%;
   border: #9e9e9e 1px solid;
   border-radius: 10px;
   padding: 10px;
   box-sizing: border-box;
-  font-size: 1em;
+  font-size: 16px;
 }
 
-.form .select-box {
+/* select box */
+.form-container .select-box {
   width: 100%;
   padding-top: 5px;
   padding-bottom: 5px;
-  font-size: 1em;
+  font-size: 16px;
 }
-/* 
-.form .button{
-  background-color: aqua;
-  margin-top: 10px;
+
+/* checkbox */
+input[type='checkbox'] {
+  float: left;
+  width: 20px;
+}
+
+/*                submission page               */
+/* checkbox */
+input[type='file'] {
+  border: none;
+}
+
+textarea {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.flex-left{
+  display: flex;
+}
+
+/*                individual sample page       */
+#container-coffee-shop{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.coffee-shop-background-img{
+  background-image: url("../img/coffee-shop-1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 200px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 100px;
+}
+
+.margin-bottom-20{
+  margin-bottom: 20px
+}
+
+.coffee-shop-name{
+  font-size: 40px;
+  font-weight: bolder;
+}
+
+.btn-icon-and-text{
+  width: 150px;
+  border-radius:10px;
+  padding: 10px;
+  text-align: center;
+}
+
+/*                Media Queries               */
+/* Small devices ( 600px wide or less) */
+/* @media (max-width: 600px) {
+  .form-container {
+    width: 100%;
+    margin: auto;
+    height: auto;
+  }
 } */
+
+/* Medium devices (992px wide or less) */
+@media (max-width: 992px) {
+  .form-container {
+    width: 80%;
+    margin: auto;
+    height: auto;
+  }
+ 
+  #container-coffee-shop{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
