finish search, sample result page

--- a/part_1/assets/css/user_registration.css
+++ b/part_1/assets/css/user_registration.css
@@ -73,8 +73,7 @@ footer {
 }
 
 /* select box */
-.form-container .select-box {
-  width: 100%;
+.form-container {
   padding-top: 5px;
   padding-bottom: 5px;
   font-size: 16px;
@@ -152,7 +151,7 @@ textarea {
     margin: auto;
     height: auto;
   }
- 
+
   #container-coffee-shop{
     width: 100%;
     margin-left: auto;
