--- a/part_1/assets/css/search-style.css
+++ b/part_1/assets/css/search-style.css
@@ -132,6 +132,49 @@ body {
   width: 33%;
 }
 
+/* button */
+.btn{
+  background-color: #556E5B;
+  color: white;
+  font-weight: bolder;
+}
+
+.btn:hover{
+  background-color: #556E5B;
+}
+
+.form-container label {
+  font-size: 16px;
+}
+
+.form-container input {
+  width: 100%;
+  border: #9e9e9e 1px solid;
+  border-radius: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+.form-container {
+  width: 30%;
+  margin: auto;
+  height: auto;
+}
+
+.form-container h3 {
+  color: black;
+  text-align: center;
+  padding: 20px;
+  font-size: 25px;
+}
+
+.form-group-lable-and-input {
+  text-align: left;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
 footer {
   text-align: center;
 }
