--- a/part_1/assets/css/user_registration.css
+++ b/part_1/assets/css/user_registration.css
@@ -2,39 +2,23 @@
 * Author: Fang Ye, Haoyang Tao
 *
 */
-body {
-  font-family: "Nunito", sans-serif;
-  color: #444444;
-  background-color: #fafafa;
-  width: 100%;
-}
-
-header {
-  background-color: #9e9e9e;
-  height: 50px;
-}
-
-footer {
-  background-color: #9e9e9e;
-  height: 50px;
-}
 
 /* button */
-.btn{
-  background-color: rgba(244,57,57,1);
+.btn {
+  background-color: #556E5B;
   color: white;
   font-weight: bolder;
 }
 
-.btn:hover{
-  background-color: rgb(250 21 21);
+.btn:hover {
+  background-color: #26472e;
 }
 
 /* rating */
-.rating i{
+.rating i {
   margin: 0px;
   color: #ff9800;
-  vertical-align:middle;
+  vertical-align: middle;
   align-items: center;
   font-size: 20px;
 }
@@ -96,65 +80,74 @@ textarea {
   box-sizing: border-box;
 }
 
-.flex-left{
+.flex-left {
   display: flex;
 }
 
 /*                individual sample page       */
-#container-coffee-shop{
-  width: 80%;
+.individual-obj-container {
+  width: 100%;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.coffee-shop-background-img{
-  background-image: url("../img/coffee-shop-1.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  height: 200px;
-  display: flex;
-  flex-wrap: wrap;
-  padding-top: 100px;
-}
-
-.margin-bottom-20{
+.margin-bottom-20 {
   margin-bottom: 20px
 }
 
-.coffee-shop-name{
+.margin-left-10 {
+  margin-left: 10px;
+}
+
+.coffee-shop-name {
   font-size: 40px;
   font-weight: bolder;
 }
 
-.btn-icon-and-text{
+.coffee-shop-img {
+  width: 50%;
+}
+
+.individual-map{
+  width: 50%;
+}
+
+.btn-icon-and-text {
   width: 150px;
-  border-radius:10px;
+  border-radius: 10px;
   padding: 10px;
   text-align: center;
 }
 
-/*                Media Queries               */
-/* Small devices ( 600px wide or less) */
-/* @media (max-width: 600px) {
-  .form-container {
-    width: 100%;
-    margin: auto;
-    height: auto;
-  }
-} */
-
 /* Medium devices (992px wide or less) */
 @media (max-width: 992px) {
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
   .form-container {
     width: 80%;
     margin: auto;
     height: auto;
+    /* background-color: #92897b; */
   }
 
-  #container-coffee-shop{
+  .individual-obj-container {
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    padding-left: 0px;
+    padding-right: 0px;
   }
+
+  .coffee-shop-img {
+    width: 100%;
+  }
+
+  .individual-map{
+    width: 100%;
+  }
+
+
+
 }
