--- a/part_1/assets/css/user_registration.css
+++ b/part_1/assets/css/user_registration.css
@@ -16,7 +16,7 @@
 
 /* rating */
 .rating i {
-  margin: 0px;
+  margin: 0;
   color: #ff9800;
   vertical-align: middle;
   align-items: center;
@@ -144,8 +144,8 @@ textarea {
 
   .individual-obj-container {
     width: 100%;
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .coffee-shop-img {
