--- a/part_1/assets/css/index-style.css
+++ b/part_1/assets/css/index-style.css
@@ -75,9 +75,28 @@ body {
   font-size: 2.7rem;
   font-weight: 900;
   margin-bottom: 5px;
+  padding-top: 15px;
+}
+
+.colored-title {
+  color: #1A6692;
 }
 
 .obj-container {
+  margin-top: 50px;
+  width: 100%;
+  max-width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #fff;
+  display: flex;
+  flex-direction:row;
+  align-items: stretch;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.search-obj-container {
   margin-top: 50px;
   width: 100%;
   max-width: 1200px;
@@ -97,10 +116,49 @@ body {
   text-align: center;
 }
 
+.search-objects {
+  width: 50%;
+  height: 50%;
+  text-align: center;
+}
+
+.search-map {
+  width: 100%;
+}
+
+.search-map-img {
+  width: 100%;
+}
+
 .sample-img {
   text-align: center;
   width:70%;
   height: 70%;
+}
+
+@media (max-width: 992px) {
+  .objects {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
+
+  .search-objects {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
+
+  .nav-ul {
+    margin-top:80px;
+    flex-direction: column;
+    text-align: center;
+    padding: 0px;
+  }
+
+  .nav-li {
+    padding: 15px;
+  }
 }
 
 .des-title {
