--- a/part_1/assets/css/index-style.css
+++ b/part_1/assets/css/index-style.css
@@ -149,8 +149,11 @@ body {
     text-align: center;
   }
 
+  .nav-bar {
+    margin-top: 0px;
+  }
+
   .nav-ul {
-    margin-top:80px;
     flex-direction: column;
     text-align: center;
     padding: 0px;
