--- a/part_2/assets/css/style.css
+++ b/part_2/assets/css/style.css
@@ -162,6 +162,13 @@ body {
   height: 70%;
 }
 
+.sample-img-popup {
+  text-align: center;
+  width:100%;
+  height: 100%;
+  margin-top: 10px;
+}
+
 /* form */
 .form-container {
   width: 30%;
